[package]
name = "jojodiff"
description = "Rust library for handling JojoDiff files, a diff utility for binary files."
version = "0.1.3"
edition = "2021"
repository = "https://github.com/francisdb/jojodiff-rs"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/jojodiff"

keywords = ["jojodiff", "patch", "diff", "patching", "jojo"]
categories = ["filesystem", "compression"]

[dependencies]
log = "0.4.22"

[dev-dependencies]
pretty_assertions = "1.4.1"
env_logger = "0.11.5"
